# My-Rust-Workspaces

./: .gitignore  Cargo.toml  README.md
actix-diesel-sqlite/: Cargo.toml
article_api/: .env  Cargo.toml
article_api/migrations/2024-06-15-101621_create_articles/: up.sql
article_api/src/: handlers.rs  main.rs  models.rs  schema.rs
ehrm/: Cargo.toml
events_api/: .env  Cargo.toml  Dockerfile  README.md  README_2.md  client-event-api.http
events_api/kubernetes/: db-configmap.yaml  db-deployment.yaml  db-persistent-volume.yaml  db-service.yaml  web-deployment.yaml  web-service.yaml
events_api/migrations/2024-06-16-110237_create_events/: down.sql  up.sql
events_api/src/: main.rs
events_api/src/handlers/: handlers.rs
events_api/src/models/: events.rs
events_api/src/repository/: database.rs
